deployment/k8s/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: __APP__
  namespace: __K8S_NAMESPACE__
  labels:
    app: __APP__
spec:
  type: ClusterIP
  selector:
    app: __APP__
    instance: app
  ports:
    - port: 80
      targetPort: __SERVER_PORT__
