deployment/k8s/4-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP__
  namespace: __K8S_NAMESPACE__
  labels:
    website: __APP__
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
    - host: __DOMAIN__
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: __APP__
              port:
                number: 80
  tls:
    - hosts:
      - __DOMAIN__
      secretName: tls-wildcard-maersk-digital-net
